--- a/manifest.json
+++ b/manifest.json
@@ -5,4 +5,5 @@
     "display": "banking",
     "background_color": "#fdfdfd",
     "theme_color": "#db4938",
-    "orientation": "portrait-primary"}
+    "orientation": "portrait-primary"
+}
