--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,11 @@
     "display": "banking",
     "background_color": "#fdfdfd",
     "theme_color": "#db4938",
-    "orientation": "portrait-primary"
+    "orientation": "portrait-primary",
+    "icons": [
+        {
+          "src": "assets/icon.jpg",
+          "type": "image/jpg", "sizes": "980x980"
+        }
+    ]
 }
