--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Flybankingapp",
     "short_name": "Flybankingapp",
-    "start_url": "index.html",
-    "display": "banking",
+    "start_url": "/",
+    "display": "standalon",
     "background_color": "#fdfdfd",
     "theme_color": "#db4938",
     "orientation": "portrait-primary",
