--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
     "name": "Flybankingapp",
     "short_name": "Flybankingapp",
+    "app_name": "Flybankingapp",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#fdfdfd",
-    "theme_color": "#db4938",
+    "background_color": "#4732be",
+    "theme_color": "#4732be",
     "orientation": "portrait-primary",
     "icons": [
         {
